# nanoservice

./: .codeclimate.yml  .gitignore  .travis.yml  CHANGELOG.md  CI.rst  Makefile  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  travis_yml.disabled
.github/workflows/: ci.yml
examples/req_rep/: simple_client.py  simple_service.py
nanoservice/: __init__.py  core.py  encoder.py  reqrep.py
test/: test_base_client.py  test_base_service.py
test2/: test_encoders.py  test_encoders2.py  test_req_rep.py
