[metadata]
name = nanoservice
version = attr: nanoservice.__version__
author = Tony Walker
author_email = walkr.walkr@gmail.com
description = library for lightweight networked services using nanomsg
long_description = file: README.rst
url = https://github.com/walkr/nanoservice
license = BSD
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    msgpack
    nanomsg @ git+https://github.com/freepn/nanomsg-python@1.0.2-4#egg=nanomsg

dependency_links =
    nanomsg @ git+https://github.com/freepn/nanomsg-python@1.0.2-4#egg=nanomsg

include_package_data = True
packages = find:

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
test =
    pytest
    flake8
    coverage
ci =
    codecov

[bdist_wheel]
universal = 1

[tool:pytest]
flake8-ignore =
    test/*.py ALL
    test2/*.py ALL

flake8-max-line-length = 95
